--- a/studentsManage/src/main/webapp/css/myLogin.css
+++ b/studentsManage/src/main/webapp/css/myLogin.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: rgb(59, 94, 88);
     display: flex;
@@ -30,7 +25,6 @@ body {
 #login_fail {
     text-align: center;
     color: red;
-    display: inline;
 }
 
 p {
@@ -78,4 +72,9 @@ p {
     width: 100px;
     height: 31px;
     font-size: 16px;
+}
+
+a {
+    color: blue;
+    text-decoration: none;
 }
