--- a/studentsManage/src/main/webapp/css/myRegister.css
+++ b/studentsManage/src/main/webapp/css/myRegister.css
@@ -25,7 +25,6 @@ body {
 #register_fail {
     text-align: center;
     color: red;
-    display: inline;
 }
 
 p {
@@ -84,4 +83,9 @@ p {
     width: 100px;
     height: 31px;
     font-size: 16px;
+}
+
+a {
+    color: rgb(14, 83, 14);
+    text-decoration: none;
 }
