--- a/studentManage2/src/main/webapp/css/index_style.css
+++ b/studentManage2/src/main/webapp/css/index_style.css
@@ -25,7 +25,19 @@ a {
     text-decoration: none;
 }
 
-button {
+.login {
+    margin-top: 20px;
+    border-color: cornsilk;
+    background-color: #857509;
+    color: aliceblue;
+    border-style: hidden;
+    border-radius: 5px;
+    width: 160px;
+    height: 31px;
+    font-size: 16px;
+}
+
+.manage {
     margin-top: 20px;
     border-color: cornsilk;
     background-color: #409EFF;
