--- a/studentManage2/src/main/webapp/css/myGate.css
+++ b/studentManage2/src/main/webapp/css/myGate.css
@@ -8,26 +8,49 @@ body {
 
 #myLoginDiv {
     width: 37%;
-    height: 380px;
-    background-color: rgb(60, 134, 121);
+    height: 400px;
     box-shadow: 7px 7px 17px rgba(52, 56, 66, 0.5);
     border-radius: 5px;
 }
 
-#login_title {
+h1 {
     text-align: center;
     color: rgb(219, 200, 26);
 }
 
-.input{
+.input {
     margin-top: 20px;
     margin-left: 80px;
     color: azure;
 }
 
+#username01 {
+    width: 180px;
+    margin-left: 15px;
+    border-radius: 5px;
+    border-style: hidden;
+    height: 30px;
+    background-color: rgba(216, 191, 216, 0.5);
+    outline: none;
+    color: #f0edf3;
+    padding-left: 10px;
+}
+
 #username {
     width: 180px;
     margin-left: 15px;
+    border-radius: 5px;
+    border-style: hidden;
+    height: 30px;
+    background-color: rgba(216, 191, 216, 0.5);
+    outline: none;
+    color: #f0edf3;
+    padding-left: 10px;
+}
+
+#password01 {
+    width: 182px;
+    margin-left: 30px;
     border-radius: 5px;
     border-style: hidden;
     height: 30px;
@@ -49,21 +72,21 @@ body {
     padding-left: 10px;
 }
 
-#subDiv {
-    text-align: center;
-    margin-top: 30px;
+#checkCode {
+    width: 80px;
+    margin-left: 20px;
+    border-radius: 5px;
+    border-style: hidden;
+    height: 30px;
+    background-color: rgba(216, 191, 216, 0.5);
+    outline: none;
+    color: #f0edf3;
+    padding-left: 10px;
 }
 
-
-#sub_press {
-    border-color: cornsilk;
-    background-color: rgba(100, 149, 237, .7);
-    color: aliceblue;
-    border-style: hidden;
-    border-radius: 5px;
-    width: 100px;
-    height: 31px;
-    font-size: 16px;
+.subDiv {
+    text-align: center;
+    margin-top: 30px;
 }
 
 a {
