--- a/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="mix.jade.HelloController">
+      fx:controller="mix.jade.HelloController" onKeyPressed="#handleKeyPressed">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-
+    <TextField fx:id="myTextField">
+        <contextMenu>
+            <ContextMenu>
+                <items>
+                    <MenuItem text="数据1" onAction="#handleRightAction1"/>
+                    <MenuItem text="数据2" onAction="#handleRightAction2"/>
+                </items>
+            </ContextMenu>
+        </contextMenu>
+    </TextField>
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
