--- a/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="mix.jade.HelloController" onKeyPressed="#handleKeyPressed">
+      fx:controller="mix.jade.controller.HelloController" onKeyPressed="#handleKeyPressed">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -24,4 +24,5 @@
     </HBox>
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="切换页面" onAction="#changeScene"/>
 </VBox>
