JavaFx设置占位符

--- a/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/hello-view.fxml
@@ -11,7 +11,7 @@
     </padding>
     <HBox spacing="10" alignment="CENTER">
         <Label text="Your Label"/>
-        <TextField fx:id="myTextField">
+        <TextField fx:id="myTextField" promptText="这是占位符">
             <contextMenu>
                 <ContextMenu>
                     <items>
