JavaFx切换页面优化、css加入字体样式

--- a/interest/demoFx/src/main/resources/mix/jade/css/world.css
+++ b/interest/demoFx/src/main/resources/mix/jade/css/world.css
@@ -5,3 +5,9 @@
 .hyperlink {
     -fx-background-color: lightblue;
 }
+
+.red-bg {
+    -fx-background-color: red;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
