--- a/interest/demoFx/src/main/resources/mix/jade/panel-view.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/panel-view.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="mix.jade.controller.PanelController">
+            fx:controller="mix.jade.PanelController">
     <left>
-        <ListView fx:id="menuListView" />
+        <VBox>
+            <Button text="菜单1" onAction="#loadFxml_1"/>
+            <Button text="菜单2" onAction="#loadFxml_2"/>
+        </VBox>
     </left>
     <center>
-        <StackPane fx:id="contentPane" />
+        <StackPane fx:id="contentPane"/>
     </center>
 </BorderPane>
