--- a/interest/demoFx/src/main/resources/mix/jade/world-view.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/world-view.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="mix.jade.controller.WorldController"
+      fx:controller="mix.jade.WorldController"
       prefHeight="400.0" prefWidth="600.0"
       stylesheets="@css/world.css">
     <Label text="这是一个新的页面"/>
