--- a/interest/demoFx/src/main/resources/mix/jade/child/panel-item-1.fxml
+++ b/interest/demoFx/src/main/resources/mix/jade/child/panel-item-1.fxml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="mix.jade.child.PanelItem1" prefHeight="400.0" prefWidth="600.0">
     <Label text="菜单1"/>
+    <Label fx:id="checkText" text="当前未选中行"/>
+    <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
+        <columns>
+            <TableColumn fx:id="name" text="姓名"/>
+            <TableColumn fx:id="age" text="年龄"/>
+        </columns>
+    </TableView>
 </VBox>
