优化demoFx代码名称

--- a/guiLearn/demoFx/src/main/resources/mix/jade/PanelView.fxml
+++ b/guiLearn/demoFx/src/main/resources/mix/jade/PanelView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="mix.jade.PanelController">
+            fx:controller="mix.jade.PanelView">
     <left>
         <VBox>
             <Button text="菜单1" onAction="#loadFxml_1"/>
